hotfix: text overflow fix
:w

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -11,6 +11,5 @@
   .profile__info {
     margin: 0 0 34px;
     justify-content: center;
-    padding: 0 19px;
   }
 }
