--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,5 +1,5 @@
 .profile__subtitle {
-  width: 100%;
+  min-width: 90%;
   margin: 0;
   font-size: 18px;
   line-height: calc(22 / 18);
@@ -13,5 +13,7 @@
   .profile__subtitle {
     text-align: center;
     font-size: 14px;
+    max-width: 275px;
+    margin: 0 19px;
   }
 }
